fix: stash current state

--- a/.gitmodules
+++ b/.gitmodules
@@ -5,7 +5,10 @@
 	path = lib/aave-helpers
 	url = https://github.com/bgd-labs/aave-helpers
 	branch = feat/changes-for-3_5-version
+[submodule "lib/aave-v3-origin-private"]
+	path = lib/aave-v3-origin-private
+	url = https://github.com/bgd-labs/aave-v3-origin-private
 [submodule "lib/aave-v3-origin"]
 	path = lib/aave-v3-origin
-	url = https://github.com/aave-dao/aave-v3-origin
-	branch = v3.5.0
+	url = https://github.com/bgd-labs/aave-v3-origin-private
+	branch = v3.6.0
