--- a/.gitmodules
+++ b/.gitmodules
@@ -1,10 +1,6 @@
 [submodule "lib/forge-std"]
 	path = lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
-[submodule "lib/aave-helpers"]
-	path = lib/aave-helpers
-	url = https://github.com/bgd-labs/aave-helpers
-	branch = feat/changes-for-3_5-version
 [submodule "lib/aave-v3-origin-private"]
 	path = lib/aave-v3-origin-private
 	url = https://github.com/bgd-labs/aave-v3-origin-private
@@ -12,3 +8,7 @@
 	path = lib/aave-v3-origin
 	url = https://github.com/bgd-labs/aave-v3-origin-private
 	branch = v3.6.0
+[submodule "lib/aave-helpers"]
+	path = lib/aave-helpers
+	url = https://github.com/bgd-labs/aave-helpers
+	branch = main
