--- a/.gitmodules
+++ b/.gitmodules
@@ -5,7 +5,7 @@
 	path = lib/aave-helpers
 	url = https://github.com/bgd-labs/aave-helpers
 	branch = main
-[submodule "lib/aave-v3-origin-private.git"]
-	path = lib/aave-v3-origin-private.git
+[submodule "lib/aave-v3-origin"]
+	path = lib/aave-v3-origin
 	url = https://github.com/bgd-labs/aave-v3-origin-private.git
 	branch = v3.6.0
