--- a/.gitmodules
+++ b/.gitmodules
@@ -7,5 +7,4 @@
 	branch = main
 [submodule "lib/aave-v3-origin"]
 	path = lib/aave-v3-origin
-	url = https://github.com/bgd-labs/aave-v3-origin-private.git
-	branch = v3.6.0
+	url = https://github.com/bgd-labs/aave-v3-origin
